# duckdb

./: .gitignore  LICENSE  README.md  fpm.toml  meson.build
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: build_and_test.yml
app/: main.f90  test.c
data/: result.parquet  test.parquet
example/: duckdb.f  main.f  meson.build  utils.f
src/: common.f90  constants.f90  ddb.f90  duckdb.f90  main.f90  meson.build  strings.f90
test/: compare_parquet.py  main.f90  test_appender.f90  test_complex_types.f90  test_data_chunk.f90  test_extract.f90  test_fortran_api.f90  test_parquet_files.f90  test_pending.f90  test_prepared.f90  test_starting_database.f90  test_table_f.f90
